--- a/Using Transfer Learning Classification.ipynb
+++ b/Using Transfer Learning Classification.ipynb
@@ -25,7 +25,9 @@
         "\n",
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import Model\n",
-        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n"
+        "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+        "\n",
+        "import shutil"
       ]
     },
     {
@@ -270,7 +272,8 @@
         }
       ],
       "source": [
-        "trainLabels_df"
+        "# View five first dataset\n",
+        "trainLabels_df.head(5)"
       ]
     },
     {
@@ -473,7 +476,8 @@
         }
       ],
       "source": [
-        "submission_df"
+        "# View the submission images needeed\n",
+        "submission_df.head(5)"
       ]
     },
     {
@@ -526,6 +530,7 @@
       },
       "outputs": [],
       "source": [
+        "# Create sub directories for the classes to be classified (WithMask and nowithMask)\n",
         "os.chdir('/content')\n",
         "\n",
         "os.mkdir(\"/content/image\")\n",
@@ -563,7 +568,8 @@
       },
       "outputs": [],
       "source": [
-        "import shutil\n",
+        "# Inserting the images to their respetive folders.\n",
+        "\n",
         "\n",
         "for i in train:\n",
         "\n",
