--- a/Using Transfer Learning Classification.ipynb
+++ b/Using Transfer Learning Classification.ipynb
@@ -696,6 +696,8 @@
         }
       ],
       "source": [
+        "# Create the train and validation generator\n",
+        "\n",
         "train_generator, validation_generator = train_val_generators(TRAINING_DIR, VALIDATION_DIR)"
       ]
     },
@@ -740,6 +742,7 @@
         }
       ],
       "source": [
+        "# Get the Invception_V3 model\n",
         "!wget --no-check-certificate \\\n",
         "    https://storage.googleapis.com/mledu-datasets/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5 \\\n",
         "    -O /tmp/inception_v3_weights_tf_dim_ordering_tf_kernels_notop.h5"
