--- a/Using Transfer Learning Classification.ipynb
+++ b/Using Transfer Learning Classification.ipynb
@@ -771,6 +771,8 @@
       },
       "outputs": [],
       "source": [
+        "# Create the pretrain model from the imported model\n",
+        "\n",
         "def create_pre_trained_model(local_weights_file):\n",
         "\n",
         "    \"\"\"\n",
@@ -1658,6 +1660,7 @@
         "\n",
         "  Returns:\n",
         "    last_output: output of the model's last layer\n",
+        "    \n",
         "  \"\"\"\n",
         "\n",
         "  last_desired_layer = pre_trained_model.get_layer('mixed7')\n",
