--- a/Using Transfer Learning Classification.ipynb
+++ b/Using Transfer Learning Classification.ipynb
@@ -32,29 +32,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PSF5jhSS7ymm",
-        "outputId": "a1e683d1-7e3d-4cc8-b294-74fa26b2fb9b"
-      },
+      "execution_count": 13,
+      "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Number of items in the folder: 0\n",
+            "Folder divided into four.\n"
           ]
         }
       ],
       "source": [
-        "# Connecting to google drive\n",
-        "drive.mount('/content/drive')\n",
+        "# import os\n",
+        "# import shutil\n",
+        "# import math\n",
         "\n",
-        "# Changing the directory\n",
-        "os.chdir('/content/drive/My Drive/Zindi/Facemask_Challenge')\n"
+        "# def count_items_in_folder(folder_path):\n",
+        "#     items = os.listdir(folder_path)\n",
+        "#     return len(items)\n",
+        "\n",
+        "# def divide_folder_into_four(source_folder, destination_folder_prefix):\n",
+        "#     items = os.listdir(source_folder)\n",
+        "#     total_items = len(items)\n",
+        "\n",
+        "#     # Calculate the number of items per group\n",
+        "#     items_per_group = math.ceil(total_items / 4)\n",
+        "\n",
+        "#     # Create destination folders\n",
+        "#     for i in range(4):\n",
+        "#         destination_folder = f\"{destination_folder_prefix}_{i+1}\"\n",
+        "#         os.makedirs(destination_folder, exist_ok=True)\n",
+        "\n",
+        "#     # Move items to destination folders\n",
+        "#     for i, item in enumerate(items):\n",
+        "#         source_item_path = os.path.join(source_folder, item)\n",
+        "#         group_number = i // items_per_group + 1\n",
+        "#         destination_folder = f\"{destination_folder_prefix}_{group_number}\"\n",
+        "#         shutil.move(source_item_path, destination_folder)\n",
+        "\n",
+        "# if __name__ == \"__main__\":\n",
+        "#     source_folder_path = \"./images/\"\n",
+        "#     destination_folder_prefix = \"image_dataset\"\n",
+        "\n",
+        "#     # Count the number of items in the source folder\n",
+        "#     num_items = count_items_in_folder(source_folder_path)\n",
+        "#     print(f\"Number of items in the folder: {num_items}\")\n",
+        "\n",
+        "#     # Divide the folder into four\n",
+        "#     divide_folder_into_four(source_folder_path, destination_folder_prefix)\n",
+        "#     print(\"Folder divided into four.\")\n"
       ]
     },
     {
