--- a/Using_Transfer_Learning_Classification.ipynb
+++ b/Using_Transfer_Learning_Classification.ipynb
@@ -2,7 +2,10 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
         "<a href=\"https://colab.research.google.com/github/iam-dante/Spot-Mask-Challenge/blob/main/Using_Transfer_Learning_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
