--- a/Using_Transfer_Learning_Classification.ipynb
+++ b/Using_Transfer_Learning_Classification.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/iam-dante/Spot-Mask-Challenge/blob/main/Using_Transfer_Learning_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -40,24 +40,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "!mkdir dataset/\n",
-        "!cp -r ./image_dataset_1/* dataset/\n",
-        "!cp -r ./image_dataset_2/* dataset/\n",
-        "!cp -r ./image_dataset_3/* dataset/\n",
-        "!cp -r ./image_dataset_4/* dataset/"
+        "# Run this if you are in colab\n",
+        "\n",
+        "# !git clone \"https://github.com/iam-dante/Spot-Mask-Challenge\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
-        "import pandas as pd"
+        "# Run this if you are in colab\n",
+        "\n",
+        "# !mkdir dataset/\n",
+        "# !cp -r ./Spot-Mask-Challenge/image_dataset_1/* dataset/\n",
+        "# !cp -r ./Spot-Mask-Challenge/image_dataset_2/* dataset/\n",
+        "# !cp -r ./Spot-Mask-Challenge/image_dataset_3/* dataset/\n",
+        "# !cp -r ./Spot-Mask-Challenge/image_dataset_4/* dataset/"
       ]
     },
     {
@@ -404,7 +408,7 @@
         "\n",
         "  # Instantiate the ImageDataGenerator class\n",
         "  train_datagen = ImageDataGenerator(rescale=1./255,\n",
-        "                                     rotation_range=40,\n",
+        "                                     rotation_range=30,\n",
         "                                     width_shift_range=0.2,\n",
         "                                     height_shift_range=0.2,\n",
         "                                     shear_range=0.2,\n",
@@ -415,14 +419,14 @@
         "  train_generator = train_datagen.flow_from_directory(directory=TRAINING_DIR,\n",
         "                                                      batch_size=32,\n",
         "                                                      class_mode=\"binary\",\n",
-        "                                                      target_size=(150, 150))\n",
+        "                                                      target_size=(224, 224))\n",
         "\n",
         "  validation_datagen = ImageDataGenerator(rescale=1./255)\n",
         "\n",
         "  validation_generator = validation_datagen.flow_from_directory(directory=VALIDATION_DIR,\n",
         "                                                                batch_size=32,\n",
         "                                                                class_mode=\"binary\",\n",
-        "                                                                target_size=(150, 150))\n",
+        "                                                                target_size=(224, 224))\n",
         "\n",
         "  return train_generator, validation_generator\n"
       ]
@@ -538,7 +542,7 @@
         "\n",
         "    \"\"\"\n",
         "\n",
-        "    pre_trained_model = InceptionV3(input_shape = (150, 150, 3),\n",
+        "    pre_trained_model = InceptionV3(input_shape = (224, 224, 3),\n",
         "                                    include_top = False,\n",
         "                                    weights = None\n",
         "                                    )\n",
@@ -1493,14 +1497,12 @@
         "  # Flatten the output layer to 1 dimension\n",
         "  x = layers.Flatten()(last_output)\n",
         "\n",
-        "\n",
-        "\n",
         "  # Add a fully connected layer with 1024 hidden units and ReLU activation\n",
         "  x = layers.Dense(512, activation='relu')(x)\n",
-        "\n",
+        "  x = layers.Dropout(0.4)(x)\n",
         "  x = layers.Dense(1024, activation='relu')(x)\n",
         "  # Add a dropout rate of 0.2\n",
-        "  x = layers.Dropout(0.1)(x)\n",
+        "  x = layers.Dropout(0.4)(x)\n",
         "  # Add a final sigmoid layer for classification\n",
         "  x = layers.Dense(1, activation='sigmoid')(x)\n",
         "\n",
@@ -1508,7 +1510,7 @@
         "  model = Model(inputs=pre_trained_model.input, outputs= x)\n",
         "\n",
         "  # Compile the model\n",
-        "  model.compile(optimizer = RMSprop(learning_rate=0.0001),\n",
+        "  model.compile(optimizer = RMSprop(learning_rate=0.001),\n",
         "                loss = 'binary_crossentropy',\n",
         "                metrics = [['accuracy', 'AUC', 'binary_accuracy']])\n",
         "\n",
