--- a/classification.ipynb
+++ b/classification.ipynb
@@ -11,8 +11,8 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "colab_type": "text",
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "outputs": [],
       "source": [
